Removed embedded Jackson sources.
Removed the embedded Jackson sources. Instead, we now rely on the
jackson-core-asl.jar file (version 1.9.13) as an external dependency.
Various changes were made to the ant-scripts to include the new library
on the class-path. The NetBeans and configuration was also changed to
reference the new dependency.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/WorldWindJava
 endorsed.classpath=
 excludes=
+file.reference.jackson.jar=jackson-core-asl.jar
 file.reference.gdal.jar=gdal.jar
 file.reference.gluegen-rt.jar=gluegen-rt.jar
 file.reference.jogl-all.jar=jogl-all.jar
@@ -44,6 +45,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
+    ${file.reference.jackson.jar}:\
     ${file.reference.gdal.jar}:\
     ${file.reference.junit-4.5.jar}:\
     ${file.reference.gluegen-rt.jar}:\
